--- a/Lab4/src/main/resources/application.properties
+++ b/Lab4/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=Lab4
+# --- i18n ---
+spring.messages.basename=i18n/layout           # bundle tên "layout"
+
+# --- Thymeleaf & response encoding ---
+spring.thymeleaf.encoding=UTF-8
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# (dev) xem log message bundle ?? ch?c ch?n ?ang n?p ?úng & UTF-8
+logging.level.org.springframework.context.support.ReloadableResourceBundleMessageSource=DEBUG
